--- a/2048Game/styles.css
+++ b/2048Game/styles.css
@@ -21,7 +21,7 @@ body{
     /* margin: 20px auto; */
     border: 5px solid #fff;
     /* padding: 40px 0; */
-    margin: 28px auto 23px auto;
+    margin: 3px auto 6px auto;
 }
 .scores-container {
     float: right;
@@ -495,7 +495,39 @@ hr {
 @media screen and (max-width: 520px) {
     .tile.tile-super .tile-inner {
         font-size: 10px; } }
+.game-over {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: rgb(132, 7, 7);
+            font-size: 24px;
+            z-index: 1000;
+}
+.game-over button {
+        margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+.username-display {
+    margin-top: 13px;
+    font-size: 18px;
+    color: lightslategrey;
+       }
+       .container h1{
+        font-size: 2.8rem;
+    /* font-weight: bold; */
+    background: linear-gradient(to right, red, #d1a148, #7c7c42, #3a563a, #673AB7, violet);
+    -webkit-background-clip: text;
+    color: transparent;
+    /* padding: 0; */
+    
 
-
-
-       
+       }
