--- a/style2.css
+++ b/style2.css
@@ -243,3 +243,133 @@
     flex-direction: row;
     align-items: flex-end;
   }
+
+  /* responsive */
+  @media screen and (max-width: 767px) {
+    .header-tag {
+      flex-direction: column;
+      align-items: flex-start;
+      margin-left: 0;
+    }
+  
+    .nav__list {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .nav__link {
+      padding: 10px 0;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    #home .about {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .col-left {
+      margin-left: 0;
+      margin-bottom: 2rem;
+    }
+  
+    .col-right {
+      margin-left: 0;
+      margin-right: 0;
+      text-align: center;
+    }
+  
+    .col-right .section-title {
+      font-size: 2.5rem;
+      margin-top: 1rem;
+      text-align: center;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .project-item {
+      width: 90%;
+      margin: 20px auto;
+    }
+  }
+  
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .project-item {
+      width: 45%;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .contact-items-container {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .contact-item {
+      width: 90%;
+      margin-bottom: 20px;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    body {
+      font-size: 16px;
+    }
+  
+    h1 { font-size: 2rem; }
+    h2 { font-size: 1.75rem; }
+    h3 { font-size: 1.5rem; }
+  }
+
+  /* hambuuerger menu */
+
+  @media screen and (max-width: 768px) {
+    .hamburger-menu {
+      display: flex;
+      flex-direction: column;
+      cursor: pointer;
+    }
+  
+    .bar {
+      width: 25px;
+      height: 3px;
+      background-color: #333;
+      margin: 3px 0;
+      transition: 0.4s;
+    }
+  
+    .nav__list {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      width: 100%;
+      background-color: #f8f8f8;
+      padding: 20px;
+    }
+  
+    .nav__list.show {
+      display: flex;
+    }
+  
+    .nav__link {
+      padding: 10px 0;
+    }
+  
+    /* Hamburger menu animation */
+    .hamburger-menu.active .bar:nth-child(1) {
+      transform: rotate(-45deg) translate(-5px, 6px);
+    }
+  
+    .hamburger-menu.active .bar:nth-child(2) {
+      opacity: 0;
+    }
+  
+    .hamburger-menu.active .bar:nth-child(3) {
+      transform: rotate(45deg) translate(-5px, -6px);
+    }
+  }
+  
+  @media screen and (min-width: 769px) {
+    .hamburger-menu {
+      display: none;
+    }
+  }
